--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,18 @@
 plugins {
     alias(libs.plugins.android.application)
+
 }
 
 android {
-    namespace 'com.example.ticket_management'
+    namespace "com.example.ticket_management"
     compileSdk 35
 
     defaultConfig {
-        applicationId "com.example.ticket_management"
-        minSdk 24
+        applicationId  "com.example.ticket_management"
+        minSdk 28
         targetSdk 34
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -21,20 +21,26 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        compileOptions {
+            sourceCompatibility = JavaVersion.VERSION_11
+            targetCompatibility = JavaVersion.VERSION_11
+        }
+
     }
 }
-
 dependencies {
 
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.datastore.core.android
+    implementation libs.firebase.database
+    implementation libs.firebase.auth
+    implementation libs.firebase.storage
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
