--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     alias(libs.plugins.android.application)
-
+    id 'com.google.gms.google-services' version '4.4.2' apply true
 }
 
 android {
@@ -38,6 +38,7 @@ dependencies {
     implementation libs.firebase.database
     implementation libs.firebase.auth
     implementation libs.firebase.storage
+    implementation platform('com.google.firebase:firebase-bom:33.1.2')
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
