--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,13 @@
         <activity
             android:name=".activity.Auth.RegisterActivity"
             android:exported="false">
-
         </activity>
+        <activity
+            android:name=".activity.User.UpdateUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.MenuActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
