--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <application
         android:name=".activity.Movie.MyApplication"
         android:allowBackup="false"
@@ -46,6 +49,12 @@
             android:exported="false" />
         <activity
             android:name=".activity.Category.AddCategoryActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.Movie.AddMovieActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.Movie.MovieListActivity"
             android:exported="false" />
     </application>
 
